# JSWST

./: .envrc  .gitignore  Cargo.toml
.direnv/: flake-profile-192ebfe91ad8dc501a9645723c06b38a7d36fb69  flake-profile-192ebfe91ad8dc501a9645723c06b38a7d36fb69.rc
.direnv/flake-inputs/: 8zj005r7jd40s19fvmv4hk2as7dbdhk3-source  9irsi99xkbqkdb706ngl4wrl00cp3lb7-source  si3k775n94ax09w3cjgc5hr2vjs84v7m-source
src/: config.rs  error.rs  lib.rs  main.rs
src/capture/: factory.rs  mod.rs  wayland.rs
src/cli/: args.rs  commands.rs  mod.rs
src/export/: mod.rs
src/processing/: mod.rs
src/ui/: editor.rs  mod.rs  overlay.rs  widgets.rs
